[package]
name = "directed_bijective_connection_graph"
version = "0.2.1"
authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
edition = "2018"
license = "MIT"
description = "an implimentation of a directed bijective connection graph"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
