[package]
name = "gt-bijective_connection_graph"
version = "0.1.0"
authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gt-directed-bijective-connection-graph = {path="../gt-directed-bijective-connection-graph"}