[package]
name = "gt-bijective_connection_graph"
version = "0.1.0"
authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
edition = "2018"
description = "solve bijective connection graph problems."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gt-graph = {version = "0.1.0", path = "../gt-graph"}
gt-graph-path = {version="0.1.0", path = "../gt-graph-path"}
gt-directed-bijective-connection-graph = {version="0.2",path="../gt-directed-bijective-connection-graph"}