[package]
name = "gt-directed-bijective-connection-graph"
version = "0.2.1"
authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
edition = "2018"
license = "MIT"
description = "an implimentation of a directed bijective connection graph"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gt-graph-path = {version="0.1",path="../gt-graph-path"}
gt-graph = {version="0.1",path = "../gt-graph"}

[dev-dependencies]
gt-hypercube = {version="0.1",path="../gt-hypercube"}