[package]
name = "gt-hypercube"
version = "0.1.0"
authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
edition = "2018"
license = "MIT"
description = "an implimentation of hyper cube"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gt-directed-bijective-connection-graph = {version="0.2.0", path="../gt-directed-bijective-connection-graph"}
gt-graph = {version="0.1",path="../gt-graph"}