[package]
name = "gt-ltq"
version = "0.1.0"
authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gt-graph = {version="0.1", path="../gt-graph"}
gt-directed-bijective-connection-graph = {version = "0.2", path = "../gt-directed-bijective-connection-graph"}